--- a/doc/rpmdb2solv.1
+++ b/doc/rpmdb2solv.1
@@ -2,12 +2,12 @@
 .\"     Title: rpmdb2solv
 .\"    Author: [see the "Author" section]
 .\" Generator: DocBook XSL Stylesheets v1.78.0 <http://docbook.sf.net/>
-.\"      Date: 09/24/2014
+.\"      Date: 09/25/2014
 .\"    Manual: LIBSOLV
 .\"    Source: libsolv
 .\"  Language: English
 .\"
-.TH "RPMDB2SOLV" "1" "09/24/2014" "libsolv" "LIBSOLV"
+.TH "RPMDB2SOLV" "1" "09/25/2014" "libsolv" "LIBSOLV"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -48,10 +48,10 @@ instead of standard output\&.
 Print percentages as packages are being read in\&. The output format is like rpm\(cqs \-\-percent option\&.
 .RE
 .PP
-\fB\-r\fR \fIROOT\fR
+\fB\-r\fR \fIROOTDIR\fR
 .RS 4
 Use
-\fIROOT\fR
+\fIROOTDIR\fR
 as root directory\&.
 .RE
 .PP
