fix tcl var parsing in the docs

--- a/doc/libsolv-bindings.3
+++ b/doc/libsolv-bindings.3
@@ -399,8 +399,8 @@ Swig implements all constants as numeric variables, constants belonging to a lib
 .RS 4
 .\}
 .nf
-\fI$pool\fR \fBset_flag\fR \fI$solv\fR\fB::Pool_POOL_FLAG_OBSOLETEUSESCOLORS  1\fR
-\fBputs [\fR\fI$solvable\fR \fBlookup_str\fR \fI$solv\fR\fB::SOLVABLE_SUMMARY]\fR
+\fI$pool\fR \fBset_flag\fR \fI$solv::Pool_POOL_FLAG_OBSOLETEUSESCOLORS\fR  \fB1\fR
+\fBputs [\fR\fI$solvable\fR \fBlookup_str\fR \fI$solv::SOLVABLE_SUMMARY\fR\fB]\fR
 .fi
 .if n \{\
 .RE
